--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,9 @@
 
     <header class="header">
         <div class="container header-container">
-            <div class="logo">DVM INDUSTRIES</div>
+            <div class="logo">
+                <img src="Pictures/DVM_Full.png">
+            </div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
