--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accountant Template</title>
+    <title>Testimonials Template</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> </head>
 <body>
@@ -32,8 +32,8 @@
         <section class="hero">
             <div class="container hero-container">
                 <div class="hero-content">
-                    <p class="subtitle">Business Accounting</p>
-                    <h1>Beyond Balance Sheets: <span class="highlight-underline">Tailored Accounting</span> For Your Business</h1>
+                    <p class="subtitle">Turnkey facility & energy services.</p>
+                    <h1>Innovating for a <span class="highlight-underline">Freener</span> future</h1>
                     <strong>D</strong>etect opportunities or issues within the facility.<br>
                     <strong>V</strong>erify the solutions that are available.<br>
                     <strong>M</strong>aximize the facility’s efficiency and customer satisfaction. <br><br>
