--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
             <div class="container hero-container">
                 <div class="hero-content">
                     <p class="subtitle">Turnkey facility & energy services.</p>
-                    <h1>Innovating for a <span class="highlight-underline">Freener</span> future</h1>
+                    <h1>Innovating for a <span class="highlight-underline">Greener</span> future</h1>
                     <strong>D</strong>etect opportunities or issues within the facility.<br>
                     <strong>V</strong>erify the solutions that are available.<br>
                     <strong>M</strong>aximize the facility’s efficiency and customer satisfaction. <br><br>
