--- a/Index.html
+++ b/Index.html
@@ -34,9 +34,9 @@
                 <div class="hero-content">
                     <p class="subtitle">Turnkey facility & energy services.</p>
                     <h1>Our goal: Innovating for a <span class="highlight-underline">Greener</span> future</h1>
-                    <span style="color:#074D80;"><strong>D</strong></span>etect opportunities or issues within the facility.<br>
-                    <span style="color:#074D80;"><strong>V</strong></span>erify the solutions that are available.<br>
-                    <span style="color:#074D80;"><strong>M</strong></span>aximize the facility’s efficiency and customer satisfaction. <br><br>
+                    <span style="color:#1F3752;"><strong>D</strong></span>etect opportunities or issues within the facility.<br>
+                    <span style="color:#1F3752;"><strong>V</strong></span>erify the solutions that are available.<br>
+                    <span style="color:#1F3752;"><strong>M</strong></span>aximize the facility’s efficiency and customer satisfaction. <br><br>
                     <div class="hero-buttons">
                         <a href="#" class="cta-button primary-button">Consultation</a>
                         <a href="#" class="cta-button secondary-button">Learn More</a>
